fix(theme): remove extra padding from top when navbar is hidden (#2575)

--- a/src/client/theme-default/styles/vars.css
+++ b/src/client/theme-default/styles/vars.css
@@ -426,6 +426,14 @@
   --vp-nav-logo-height: 24px;
 }
 
+.hide-nav {
+  --vp-nav-height: 0px;
+}
+
+.hide-nav .VPSidebar {
+  --vp-nav-height: 22px;
+}
+
 /**
  * Component: Local Nav
  * -------------------------------------------------------------------------- */
